k8s/base/flux-system/webhook/overlays/media/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: zerossl-production
    external-dns-cf/is-dns-public: "true"
    external-dns.alpha.kubernetes.io/target: "dh.skylab.fi"
spec:
  ingressClassName: nginx
  rules:
    - host: "flux-receiver-${CLUSTER_NAME}.skylab.fi"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - "flux-receiver-${CLUSTER_NAME}.skylab.fi"
      secretName: flux-receiver-${CLUSTER_NAME}-tls
